--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
     color: brown;
 }
 
+
 h1 {
     font-size: 50px;
     font-family: 'Courier New', Courier, monospace;
@@ -16,7 +17,9 @@ h1 {
 
 img { 
     height: 500px;
-    width: auto;
+    max-width: 500px;
+    width: 100%;
+
     border-radius: 50px;
 
 }
